Event objects, look like documents + fixed stringify spacing.

--- a/src/app/modules/dashboard/event/event.component.scss
+++ b/src/app/modules/dashboard/event/event.component.scss
@@ -1,7 +1,7 @@
 @import 'var';
 
 .event-object {
-  padding: 20px 0;
-  margin-bottom: 20px;
-  border-bottom: 2px solid rgba($ablue, 0.5);
+  padding: 25px 15px;
+  margin-bottom: 25px;
+  box-shadow: 0px 3px 15px 1px rgba(0, 0, 0, 0.1);
 }
